set up reset pw mail, verified emails sent

--- a/templates/reset-pw.html
+++ b/templates/reset-pw.html
@@ -10,7 +10,7 @@
 <body>
   <div>
     <h3>Dear {{ name }},</h3>
-    <p>You have requested to reset your password. Please use this <a href="{{ url }}">link</a> to reset your password.
+    <p>Your password has been reset. You can now login with your new password.
     </p>
   </div>
 </body>
