--- a/templates/forgot-pw.html
+++ b/templates/forgot-pw.html
@@ -10,7 +10,7 @@
 <body>
   <div>
     <h3>Dear {{ name }},</h3>
-    <p>Your password has been reset and you can now login with your new password.</p>
+    <p>You have requested to reset your password. Please use this <a href="{{ url }}">link</a> to reset your password.</p>
   </div>
 </body>
 
